--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -8,12 +8,12 @@
 
 .libraryMenuDivider {
     height: 1px;
-    background: #333;
+    background: #282828;
     margin: .5em 0;
 }
 
 .headerBackButton {
-    padding-right: 0!important;
+    padding-right: 0 !important;
 }
 
 .viewMenuBar, .barsMenuButton, .libraryMenuButtonText, .btnCast {
@@ -179,22 +179,22 @@
     vertical-align: top;
 }
 
-.librarySidebarLinks a {
-    font-weight: 300 !important;
+.librarySidebarLinks {
+    margin-left: -1em;
+    margin-right: -1em;
+    margin-top: -1em;
+    padding-top: 0;
 }
 
-    .librarySidebarLinks a:hover {
-        background-color: #38c !important;
-        color: #fff !important;
+    .librarySidebarLinks a {
+        font-weight: 300 !important;
+        padding: .7em 20px .7em 0;
     }
 
-.homeViewMenu {
-    background-image: url(images/mblogoicon.png) !important;
-    background-size: 39px 26px !important;
-    background-position: 13px center !important;
-    padding-left: 66px !important;
-    background-repeat: no-repeat !important;
-}
+        .librarySidebarLinks a:hover {
+            background-color: #38c !important;
+            color: #fff !important;
+        }
 
 .viewMenuSecondary {
     position: absolute;
@@ -213,7 +213,7 @@
 }
 
 .ui-panel.ui-body-b {
-    background-color: #222;
+    background-color: #161616;
 }
 
 .libraryViewNav .ui-btn-active {
