--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -275,12 +275,16 @@
 
 @media all and (min-width: 540px) {
 
-    .portraitCard {
-        width: 25%;
-    }
-
     .smallBackdropCard {
         width: 33.3%;
+    }
+}
+
+
+@media all and (min-width: 640px) {
+
+    .portraitCard {
+        width: 25%;
     }
 }
 
