--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarymenu.css
@@ -1,9 +1,9 @@
 ﻿.libraryPage {
-    padding-top: 49px !important;
+    padding-top: 50px !important;
 }
 
     .libraryPage:not(.metadataEditorPage):not(.noSecondaryNavPage) {
-        padding-top: 99px !important;
+        padding-top: 98px !important;
     }
 
 .libraryMenuDivider {
@@ -118,9 +118,7 @@
     left: 0;
     z-index: 999;
     top: 0;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
+    border: 0;
 }
 
 .libraryViewNav {
@@ -133,12 +131,20 @@
     z-index: 999;
     text-align: center;
     font-size: 14px;
+    text-transform: uppercase;
     white-space: nowrap;
     padding: 0 0 0;
     overflow-x: scroll;
     -ms-overflow-style: none;
     overflow: -moz-scrollbars-none;
     -webkit-overflow-scrolling: touch;
+}
+
+.bottomLibraryViewNav {
+    top: initial;
+    bottom: 0;
+    border-top: 1px solid #444;
+    height: 51px;
 }
 
 .viewMenuBar {
@@ -232,9 +238,13 @@
     border-bottom: 5px solid transparent;
 }
 
-    .libraryViewNav a:not(.ui-btn-active):hover {
-        color: #2ad !important;
-    }
+.bottomLibraryViewNav a {
+    padding: 12px 0 12px;
+}
+
+.libraryViewNav a:not(.ui-btn-active):hover {
+    color: #2ad !important;
+}
 
 .libraryViewNavLinkContent {
     display: inline-block;
