--- a/MediaBrowser.WebDashboard/dashboard-ui/css/chromecast.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/chromecast.css
@@ -1,4 +1,4 @@
-﻿.btnCastImage {
+﻿.btnCastImage:not(.btnCastIcon) {
     background-color: transparent;
     background-size: 100%;
     background-repeat: no-repeat;
@@ -17,8 +17,16 @@
     background-image: url(images/chromecast/ic_media_route_on_holo_dark.png);
 }
 
+.btnActiveCast i {
+    color: #2ad !important;
+}
+
 .btnDisabledCast .btnCastImage {
     background-image: url(images/chromecast/ic_media_route_disabled_holo_dark.png);
+}
+
+.btnDisabledCast i {
+    color: #555;
 }
 
 .btnCast {
@@ -36,6 +44,10 @@
     max-width: 100px;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+.btnCastIcon .headerSelectedPlayer {
+    top: 0;
 }
 
 @media all and (max-width: 1000px) {
