--- a/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/librarybrowser.css
@@ -1055,6 +1055,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 
 .timelineHeader {
     margin-bottom: .25em;
+    line-height: 1.25em;
     line-height: initial;
 }
 
@@ -1505,6 +1506,7 @@ span.itemCommunityRating:not(:empty) + .userDataIcons {
 .homeLatestTabDisabled .homeLatestTab {
     display: none !important;
 }
+
 .movieTrailersTabDisabled .movieTrailersTab {
     display: none !important;
 }
