--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -167,15 +167,11 @@
     .cardContent .cardFooter {
         position: absolute;
         bottom: 0;
-        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%); /* FF3.6+ */
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.7))); /* Chrome,Safari4+ */
-        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%); /* Chrome10+,Safari5.1+ */
-        background: -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%); /* Opera 11.10+ */
-        background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%); /* IE10+ */
-        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.7) 100%); /* W3C */
+        background: rgba(0, 0, 0, .75);
         left: 0;
-        right: 0;
-        color: #fff;
+        color: #eee;
+        padding: 5px 0 0 0;
+        max-width: 100%;
     }
 
 .cardText {
@@ -183,9 +179,13 @@
     overflow: hidden;
     text-wrap: none;
     white-space: nowrap;
-    padding: 5px 4px 2px;
+    padding: 5px 5px 2px;
     font-weight: 400;
     line-height: 1.4;
+}
+
+.cardContent .cardFooter .cardText {
+    font-size: 16px;
 }
 
 .cardOverlayInner {
@@ -205,8 +205,7 @@
 }
 
 .cardContent .cardText {
-    padding-left: 5px;
-    padding: 0 5px 4px;
+    padding: 0 6px 4px 5px;
 }
 
 .outerCardFooter .cardText + .cardText {
