update dlna profiles

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -170,7 +170,7 @@
         background: rgba(0, 0, 0, .75);
         left: 0;
         color: #eee;
-        padding: 5px 0 0 0;
+        padding: 6px 0 2px 0;
         max-width: 100%;
     }
 
