--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -174,6 +174,10 @@
         max-width: 100%;
     }
 
+.fullCardFooter {
+    right: 0;
+}
+
 .cardText {
     text-overflow: ellipsis;
     overflow: hidden;
@@ -185,7 +189,7 @@
 }
 
 .cardContent .cardFooter .cardText {
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .cardOverlayInner {
