--- a/MediaBrowser.WebDashboard/dashboard-ui/css/tileitem.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/tileitem.css
@@ -1,5 +1,5 @@
 ﻿.tileItem {
-    background: #1e1e1e;
+    background: rgba(30, 30, 30, .7);
     padding: 10px 7px 5px;
     margin: 3px 0;
     font-weight: normal !important;
