fix report script

--- a/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
+++ b/MediaBrowser.WebDashboard/dashboard-ui/css/card.css
@@ -81,7 +81,14 @@
 }
 
 .largeCardMargin .visualCardBox {
-    margin: 18px;
+    margin: 12px;
+}
+
+@media all and (min-width: 600px) {
+
+    .largeCardMargin .visualCardBox {
+        margin: 18px;
+    }
 }
 
 .ui-page-theme-b .visualCardBox {
